--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "ngx-bootstrap": "^19.0.2",
+    "ngx-currency": "^19.0.0",
     "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
