--- a/Back/src/ProEventos.API/ProEventos.API.csproj
+++ b/Back/src/ProEventos.API/ProEventos.API.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Resources\" />
+    <Folder Include="Resources\Images\" />
   </ItemGroup>
 
 </Project>
